--- a/src/index.html
+++ b/src/index.html
@@ -60,7 +60,8 @@
   <script src="https://www.amcharts.com/lib/3/amcharts.js"></script>
   <script src="https://www.amcharts.com/lib/3/serial.js"></script>
   <script src="https://www.amcharts.com/lib/3/themes/light.js"></script>
-
+<!-- ------------------------------------Admin Dashboard (Bar chart) ---------------------- -->
+ 
 </body>
 
 </html>
